--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -1,4 +1,4 @@
 #Chapter 1
-*This course seems really interesting and fun. Below is the link*
+*R and Git are good tools. This chapter taught us the basics of using them.  Below is the link for my repo*
 
 [My repo](https://github.com/jonharju/IODS-project)
