--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -1,7 +1,52 @@
-# Insert chapter 2 title here
+# Regression and model validation
 
 *Describe the work you have done this week and summarize your learning.*
 
 - Describe your work and results clearly. 
 - Assume the reader has an introductory course level understanding of writing and reading R code as well as statistical methods
-- Assume the reader has no previous knowledge of your data or the more advanced methods you are using  
+- Assume the reader has no previous knowledge of your data or the more advanced methods you are using 
+
+
+```{r}
+learning2014 <- read.table("http://s3.amazonaws.com/assets.datacamp.com/production/course_2218/datasets/learning2014.txt",sep=",", header=TRUE)
+dim(learning2014)
+```
+
+*Here we see the dimension and summary of the data. We can see from the dimensions here that data consists of 166 obervations(rows) and 7 variables(columns).* 
+
+```{r}
+str(learning2014)
+```
+
+*In the structure we can see the names for those variables, their type and some samples of them. The names of the variables refer to the age of the participants, their gender, their attitudes towards statistics, their exam points and approaches to studying using deep-, strategy- and surface learning.*
+
+```{r}
+summary(learning2014)
+```
+
+*From the summary we can gain some more insight on the data, like that the amount of female participants was almost double compared to male or that the age of the participants was between 17 and 55.*
+
+```{r}
+library(GGally)
+library(ggplot2)
+
+p <- ggpairs(learning2014, mapping = aes(col = gender, alpha = 0.3), lower = list(combo = wrap("facethist", bins = 20)))
+p
+```
+
+*From the graphical overview we can see more about factors like correlation. We can clearly see a strong positive correlation between attitude and points, meanwhile points and age seem to have a negative correlation.*
+
+```{r}
+model <- lm(points ~ attitude + deep + surf, data = learning2014)
+summary(model)
+```
+
+```{r}
+model1 <- lm(points ~ attitude, data = learning2014)
+summary(model1)
+```
+
+```{r}
+par(mfrow = c(2,2))
+plot(model1, which = c(1,2,5))
+```
